c4prj2_input/grade.txt
Grading at Thu Jan 17 09:14:30 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:35:21: error: comparison between pointer and integer [-Werror]
   for(size_t i =0; i<fc->decks; i++){
                     ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
